# mortgage-tools

./: .env  .gitattributes  .gitignore  Amortization.py  LICENSE  README.md  ReadTextFileExample.py  ReadingMassiveTextFiles.py  callAmort.py  macroEconForecast.ipynb  mkdocs.yml  objects.inv  pyproject.toml  pythonDates.py  readRates.py  reinstall  requirements.txt  sitemap.xml  transformFred.py
cli/: cli.py  index.html
data/: macroeconforward.txt
docs/: amortization.md  architecture.md  cli.md  examples.md  forward_rates.md  heloc_curve.csv  index.md  loan_types.md  reference.md  scenarios.md  usage.md
docs/examples/: fha_30.md  heloc_draw.md  va_30.md
examples/: .Fixed vs ARM.ipynb.layout  .Untitled.ipynb.layout  Fixed vs ARM.ipynb  LoanTypes.ipynb  Mortgage_Types.ipynb  fha_30yr.csv  fixed_30yr_6.5.csv  va_15yr.csv  with_extra.csv
examples/.ipynb_checkpoints/: Mortgage_Types-checkpoint.ipynb
examples/fha_30/: index.html
examples/heloc_draw/: index.html
forward_rates/: index.html
license/: index.html
reference/: index.html
scripts/: example.py
search/: search_index.json
site/: 404.html  forward_curve.csv  index.html  objects.inv  sitemap.xml
site/amortization/: index.html
site/architecture/: index.html
site/cli/: index.html
site/examples/: index.html
site/examples/va_30/: index.html
site/forward_rates/: index.html
site/loan_types/: index.html
site/reference/: index.html
site/scenarios/: index.html
site/search/: search_index.json
site/usage/: index.html
utils/: __init__.py  rates.py
